code readability improvements