@@ -46,7 +46,7 @@ record IgnoreManagerLayout(int panelX, int panelY, int panelW, int panelH) {
     }
 
     public UiRect searchBounds() {
-        int width = Math.min(SEARCH_WIDTH, Math.max(96, panelW / 3 - 14));
+        int width = Math.clamp(panelW / 3 - 14, 96, SEARCH_WIDTH);
         return new UiRect(panelX + 14, panelY + 16, width, SEARCH_HEIGHT);
     }
 
